fix #7. no to the contrasting sidebar/content bg

--- a/static/static/css/styles.css
+++ b/static/static/css/styles.css
@@ -13,11 +13,11 @@ html {
     height:100%;
     width:340px;
     padding:10px;
-    background:#f2f2f2;
+    background:#f1f1f1;
 }
 
 #content {
-    background-color:#f2f2f2;
+    background-color:#f1f1f1;
     position:absolute;
     left:360px;
     padding-left:10px;
